--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p>
                     I'm a Full Stack Developer, I love to create beautiful and functional websites.
                     <br>
-                    "Welcome to my web development portfolio! I'm a passionate and skilled web developer dedicated to creating engaging and interactive online experiences. With a strong background in HTML, CSS, JavaScript, and various frameworks, I strive to bring innovative ideas to life through clean and efficient code.
+                    "Welcome to my web development portfolio! I'm a passionate and skilled web developer dedicated to creating engaging and interactive online experiences. With a strong background in HTML, CSS, JavaScript, React and in Backend Springboot various frameworks, I strive to bring innovative ideas to life through clean and efficient code.
                 </p>
                 <div class="btn-con">
                     <a href="Documents\DikshaResume.pdf" class="main-btn">
