--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
                     A Full Stack Developer.
                 </h1>
                 <p>
-                    I'm a Full Stack Developer passionate about creating beautiful and functional web solutions.
-
+                    Welcome to my web development portfolio! I'm a passionate developer skilled in HTML, CSS, JavaScript, React, and backend technologies like Spring Boot and Node.js, dedicated to building engaging and interactive web experiences.
                     <br>
-                    "Welcome to my web development portfolio! I'm a passionate and skilled web developer dedicated to creating engaging and interactive online experiences. With a strong background in HTML, CSS, JavaScript, React and in Backend Springboot various frameworks, I strive to bring innovative ideas to life through clean and efficient code.
-                </p>
+                    <h3>Why Should you Hire me!</h3>
+You should hire me because I am a quick learner and highly adaptable. During my previous internship, I successfully learned and implemented AWS S3 to optimize backend performance. My ability to acquire new skills, along with my strong technical expertise and problem-solving abilities, makes me a valuable addition to any team.               </p>
                 <div class="btn-con">
                     <a href="Documents\Diksha Resume.pdf" class="main-btn">
                         <span class="btn-text">Download CV</span>
@@ -89,7 +88,7 @@
                 <h4 class="stat-title">My Skills</h4>
                 <div class="progress-bars">
                     <div class="progress-bar">
-                        <p class="prog-title">html5</p>
+                        <p class="prog-title">ReactJs</p>
                         <div class="progress-con">
                             <p class="prog-text">95%</p>
                             <div class="progress">
@@ -98,7 +97,7 @@
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">css3</p>
+                        <p class="prog-title">NodeJs</p>
                         <div class="progress-con">
                             <p class="prog-text">95%</p>
                             <div class="progress">
@@ -116,7 +115,7 @@
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">React</p>
+                        <p class="prog-title">AWS</p>
                         <div class="progress-con">
                             <p class="prog-text">90%</p>
                             <div class="progress">
@@ -137,6 +136,24 @@
                         <p class="prog-title">TailwindCSS</p>
                         <div class="progress-con">
                             <p class="prog-text">95%</p>
+                            <div class="progress">
+                                <span class="python"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">MYSQL</p>
+                        <div class="progress-con">
+                            <p class="prog-text">95%</p>
+                            <div class="progress">
+                                <span class="python"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">MongoDB</p>
+                        <div class="progress-con">
+                            <p class="prog-text">100%</p>
                             <div class="progress">
                                 <span class="python"></span>
                             </div>
@@ -203,12 +220,16 @@
             <div class="experience-container grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
               
                 <div class="experience-item bg-white p-8 rounded-xl border border-blue-200 shadow-lg hover:shadow-2xl transition-shadow duration-300 ease-in-out transform hover:scale-105">
-                    <h1 class="text-2xl font-semibold text-blue-500 mb-2">Software Development Intern</h1>
+                    <h1 class="text-2xl font-semibold text-blue-500 mb-2">Software Development Intern(Gurgaon)</h1>
                     <p class="text-blue-600 mb-2">CodeMap</p>
                     <p class="text-gray-500 mb-4">Aug. 2024 - Nov. 2024</p>
                     <ul class="list-disc pl-5 text-gray-700">
-                        <li>Developed interactive dashboards using React and Tailwind CSS.</li>
-                        <li>Integrated RESTful APIs for real-time data updates and user interactions.</li>
+                        <li>Developed a dedicated platform called Smart Asset Loader using Node.js and AWS S3 to optimize file loading,
+                            leveraging AWS pre-signed URLs to enable direct uploads from the frontend, significantly reducing backend load
+                            and improving system efficiency.</li>
+                        <li>Designed and implemented the payments module using Node.js, integrating Cashfree APIs to facilitate API-based
+                            transactions while incorporating a verification mechanism to detect potential failures before processing actual
+                            payments, ensuring a seamless and reliable payment experience for clients</li>
                         <li>Collaborated with a team to enhance product features and performance.</li>
                     </ul>
                 </div>
@@ -293,7 +314,7 @@
                     <div class="hover-items">
                         <h3>Health-Care-System</h3>
                         <div class="icons">
-                            <a href="https://github.com/diksha-34/health-care-System" class="icon">
+                            <a href="https://github.com/diksha-34/Hospital-Management-Nodejs" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
                             <a href="#">
